# prt

./: .editorconfig  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.ru.md  README.zh.md  SECURITY.md  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/prt/: Cargo.toml  README.md
crates/prt-core/: Cargo.toml  README.md
crates/prt-core/benches/: scanner_bench.rs
crates/prt-core/src/: config.rs  known_ports.rs  lib.rs  model.rs
crates/prt-core/src/core/: alerts.rs  bandwidth.rs  container.rs  firewall.rs  history.rs  killer.rs  mod.rs  namespace.rs  process_detail.rs  scanner.rs  session.rs  ssh_config.rs  ssh_tunnel.rs  suspicious.rs
crates/prt-core/src/i18n/: en.rs  mod.rs  ru.rs  zh.rs
crates/prt-core/src/platform/: linux.rs  macos.rs  mod.rs
crates/prt/src/: app.rs  forward.rs  input.rs  main.rs  stream.rs  tracer.rs  ui.rs  watch.rs
crates/prt/src/views/: action_menu.rs  command_palette.rs  mod.rs  ssh_hosts.rs  tunnel_form.rs  tunnels.rs
