[package]
name = "prt-core"
version = "0.1.0"
description = "Core library for prt — network port monitor"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
nix.workspace = true
uzers.workspace = true
sys-locale = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scanner_bench"
harness = false
