[package]
name = "prt-core"
version = "0.3.0"
description = "Core library for prt — real-time network port scanner with change tracking, alerts, suspicious detection, known ports, bandwidth and container awareness"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords = ["network", "port", "scanner", "lsof", "procfs"]
categories = ["network-programming", "os"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
nix.workspace = true
uzers.workspace = true
sys-locale = "0.3"
toml.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scanner_bench"
harness = false
