[package]
name = "prt"
version = "0.3.0"
description = "Real-time terminal UI for monitoring network ports — interactive alternative to lsof/ss with alerts, firewall blocking, strace, container awareness and process trees"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords = ["network", "port", "monitor", "tui", "terminal"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "prt"
path = "src/main.rs"

[dependencies]
prt-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
arboard.workspace = true
nix.workspace = true
ratatui = "0.29"
crossterm = "0.28"
